[package]
name = "ouvert_spades"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = {version = "0.3.1", features = ["static-detour", "thiscall-abi"]}
retour-utils = "0.2.1"
mlua = { version = "0.8.9", features = ["luau", "vendored"] }
poggers = { git = "https://github.com/pozm/poggers.git" }
poggers-derive = { git = "https://github.com/pozm/poggers.git"}
hudhook = "0.4.0"
imgui = "0.11.0"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_System_Console"
]
